--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/home"
+        android:title="@string/bottom_nav_home"
+        android:icon="@mipmap/ic_newspaper" />
 
+    <item
+        android:id="@+id/settings"
+        android:title="@string/bottom_nav_settings"
+        android:icon="@mipmap/ic_settings" />
 </menu>
