--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_newspaper_foreground" />
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/about"
         android:title="@string/bottom_nav_settings"
-        android:icon="@mipmap/ic_settings_foreground" />
+        android:icon="@mipmap/ic_info_foreground" />
 </menu>
