--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -8,6 +8,22 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="40dp">
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white" />
+
+        <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,44 +48,27 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <SearchView
-                    android:id="@+id/search"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:icon="@mipmap/ic_search_foreground"
-                    android:layoutDirection="rtl"
-                    app:iconifiedByDefault="false" />
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:background="@null"
-                    android:scaleType="fitCenter"
-                    android:src="@mipmap/ic_sort_foreground" />
-
-            </LinearLayout>
 
             <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.tabs.TabItem
+                    android:id="@+id/newsTab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/news_type_default" />
 
                 <com.google.android.material.tabs.TabItem
+                    android:id="@+id/actualityTab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/news_type_actuality" />
 
                 <com.google.android.material.tabs.TabItem
+                    android:id="@+id/hotTab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/news_type_hot" />
@@ -91,10 +90,6 @@
                     android:textColor="@color/color_primary"
                     android:textSize="35dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/search_result" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/fragment_main_recycler_view"
