--- a/app/src/main/res/menu/sort_news_menu.xml
+++ b/app/src/main/res/menu/sort_news_menu.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/by_title"
+        android:title="@string/sort_by_title"
+        android:icon="@mipmap/ic_newspaper_foreground" />
+
+    <item
+        android:id="@+id/by_date"
+        android:title="@string/sort_by_date"
+        android:icon="@mipmap/ic_info_foreground" />
 </menu>
